feat: add section tickets

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -1,5 +1,5 @@
 <section id="explore" class="explore">
-    <div class="explore__container">
+    <div class="explore__container section-container">
         <div class="explore-left">
             <div class="explore-left__title">
                 <h2 class="title">
