--- a/src/html/includes/main/gallery.html
+++ b/src/html/includes/main/gallery.html
@@ -1,5 +1,5 @@
 <section id="gallery" class="gallery">
-    <div class="gallery__container">
+    <div class="gallery__container section-container">
         <h2 class="title">Art Gallery</h2>
         <div class="gallery__body">
             <div class="body__column">
