--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-    <div class="hero__container">
+    <div class="hero__container section-container">
         <div class="hero__title">
             <h2 class="title">
                 Welcome <br /> to the Louvre
