--- a/src/html/includes/main/visiting.html
+++ b/src/html/includes/main/visiting.html
@@ -1,5 +1,5 @@
 <section id="visiting" class="visiting">
-    <div class="visiting__container">
+    <div class="visiting__container section-container">
         <div class="visiting__title">
             <h2 class="visiting__title-text">
                 Virtual tour
