--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -7,6 +7,7 @@
                         <%= _.template(require('./../includes/main/explore.html').default)(data) %>
                             <%= _.template(require('./../includes/main/journey.html').default)(data) %>
                                 <%= _.template(require('./../includes/main/gallery.html').default)(data) %>
+                                    <%= _.template(require('./../includes/main/tickets.html').default)(data) %>
             </main>
             <!-- <%= _.template(require('./../includes/footer.html').default)(data) %> -->
             <%= _.template(require('./../includes/_html-bottom.html').default)(data) %>
