--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,4 +21,5 @@
 @import "sections/explore";
 @import "sections/journey";
 @import "sections/gallery";
+@import "sections/tickets";
 @import "sections/footer";
