--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -1,5 +1,5 @@
 <section id="video" class="journey">
-    <div class="journey__container">
+    <div class="journey__container section-container">
         <div class="journey-heading">
             <h2 class="title">Video journey</h2>
             <p class="journey-heading__desc-text">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
