--- a/src/scss/sections/_journey.scss
+++ b/src/scss/sections/_journey.scss
@@ -4,29 +4,7 @@
 .journey {
     width: 100%;
     height: 100%;
-    &__container {
-        max-width: 1440px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 75px;
-        padding-bottom: 75px;
-        @include media-breakpoint-down(xxl) {
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-        @include media-breakpoint-down(xl) {
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-        @include media-breakpoint-down(lg) {
-            padding-top: 40px;
-            padding-bottom: 40px;
-        }
-        @include media-breakpoint-down(sm) {
-            padding-top: 36px;
-            padding-bottom: 36px;
-        }
-    }
+    &__container {}
 }
 
 .journey-heading {
