--- a/src/scss/sections/_tickets.scss
+++ b/src/scss/sections/_tickets.scss
@@ -17,7 +17,7 @@
         align-items: flex-start;
         justify-content: center;
         @include media-breakpoint-down(xxl) {
-            gap: 20px;
+            gap: 10px;
         }
         @include media-breakpoint-down(xl) {
             gap: 80px;
@@ -30,6 +30,7 @@
         @include media-breakpoint-down(md) {
             flex-direction: column;
             align-items: center;
+            gap: 40px;
         }
     }
     &__body-img {
@@ -67,6 +68,10 @@
     flex: 1 0 auto;
     padding-left: 20px;
     padding-right: 20px;
+    @include media-breakpoint-down(xxl) {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
     @include media-breakpoint-down(xl) {
         display: none;
     }
@@ -78,10 +83,8 @@
         margin-bottom: 25px;
     }
     &__bar {
-        width: 100%;
-        height: 100%;
-        max-width: 17px;
-        max-height: 17px;
+        width: 17px;
+        height: 17px;
     }
     &__bar-title {
         font-family: 'Roboto';
@@ -101,15 +104,27 @@
         font-size: 28px;
         color: var(--palette-secondary-text);
         margin-bottom: 35px;
+        @include media-breakpoint-down(xl) {
+            text-align: center;
+        }
+        @include media-breakpoint-down(sm) {
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
     }
     &__top {}
     &__bottom {}
-    &__price {}
+    &__price {
+        text-align: center;
+    }
     &__price-title {
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
         font-size: 28px;
         color: var(--palette-secondary-text);
+        @include media-breakpoint-down(sm) {
+            font-size: 16px;
+        }
     }
     &__price-value {}
     &__btn {
@@ -123,6 +138,9 @@
         font-weight: 300;
         font-size: 22px;
         text-align: center;
+        @include media-breakpoint-down(md) {
+            margin-top: 15px;
+        }
     }
 }
 
@@ -132,6 +150,9 @@
     font-weight: 300;
     font-size: 22px;
     margin-bottom: 15px;
+    @include media-breakpoint-down(sm) {
+        font-size: 16px;
+    }
 }
 
 .amount-field-row {
