feat: add parallax

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -22,4 +22,5 @@
 @import "sections/journey";
 @import "sections/gallery";
 @import "sections/tickets";
+@import "sections/parallax";
 @import "sections/footer";
