feat: add section contacts

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,4 +23,5 @@
 @import "sections/gallery";
 @import "sections/tickets";
 @import "sections/parallax";
+@import "sections/contacts";
 @import "sections/footer";
