--- a/src/html/templates/index.html
+++ b/src/html/templates/index.html
@@ -9,6 +9,7 @@
                                 <%= _.template(require('./../includes/main/gallery.html').default)(data) %>
                                     <%= _.template(require('./../includes/main/tickets.html').default)(data) %>
                                         <%= _.template(require('./../includes/main/parallax.html').default)(data) %>
+                                            <%= _.template(require('./../includes/main/contacts.html').default)(data) %>
             </main>
             <!-- <%= _.template(require('./../includes/footer.html').default)(data) %> -->
             <%= _.template(require('./../includes/_html-bottom.html').default)(data) %>
