--- a/src/scss/blocks/title.scss
+++ b/src/scss/blocks/title.scss
@@ -1,3 +1,8 @@
+.title-underline {
+    padding-bottom: 25px;
+    border-bottom: 3px solid var(--palette-primary-dark);
+}
+
 .title {
     white-space: nowrap;
     font-family: 'Forum', serif;
