--- a/src/scss/blocks/socials.scss
+++ b/src/scss/blocks/socials.scss
@@ -5,6 +5,8 @@
     height: 60px;
     gap: 5px;
     flex-wrap: wrap;
+    align-items: center;
+    max-width: 100%;
     &__item {
         max-width: 48px;
         max-height: 48px;
