feat: some fixes

--- a/src/html/includes/main/parallax.html
+++ b/src/html/includes/main/parallax.html
@@ -1,4 +1,5 @@
-<section class="parallax">
+<div class="parallax">
     <picture class="parallax-picture-box">
+        <img class="parallax-picture-box__img" src="/img/parallax/parallax-image.jpg" alt="">
     </picture>
-</section>
+</div>
