--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -41,22 +41,22 @@
         <div class="journey-slider swiper">
             <ul class="slider__list swiper-wrapper">
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
                 <li class="slider__list-item swiper-slide">
-                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="slider-video" width="300" height="220" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
                 </li>
             </ul>
             <div class="slider-pagination swiper-pagination"></div>
