feat: convert jpg to webp

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -70,100 +70,100 @@
                 <ul class="burger-gallery">
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
-                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
-                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
-                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
-                        </picture>
-                    </li>
-                </ul>
-                <ul class="burger-gallery">
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
-                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
-                        </picture>
-                    </li>
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
-                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
-                        </picture>
-                    </li>
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
-                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="">
                         </picture>
                     </li>
                 </ul>
                 <ul class="burger-gallery">
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
-                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
-                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
-                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
-                        </picture>
-                    </li>
-                </ul>
-                <ul class="burger-gallery">
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
-                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
-                        </picture>
-                    </li>
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
-                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
-                        </picture>
-                    </li>
-                    <li class="burger-gallery__item">
-                        <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
-                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="">
                         </picture>
                     </li>
                 </ul>
                 <ul class="burger-gallery">
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.jpg">
-                            <img src="./img/burger/gallery-image1-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.jpg">
-                            <img src="./img/burger/gallery-image2-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
-                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.jpg">
-                            <img src="./img/burger/gallery-image3-768.jpg" alt="">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                        </picture>
+                    </li>
+                </ul>
+                <ul class="burger-gallery">
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                        </picture>
+                    </li>
+                </ul>
+                <ul class="burger-gallery">
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                        </picture>
+                    </li>
+                    <li class="burger-gallery__item">
+                        <picture class="burger-gallery__item-image">
+                            <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="">
                         </picture>
                     </li>
                 </ul>
