--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -5,7 +5,7 @@
             <p class="journey-heading__desc-text">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
         </div>
         <div class="journey-player">
-            <video class="journey-player__video" src="./uploads/journey.mp4" muted poster="./img/journey/poster0.jpg">              
+            <video class="journey-player__video" src="./uploads/journey.mp4" muted poster="./img/journey/poster0.webp">              
             </video>
             <button class="journey-player__main-play-btn">
               <svg class="journey-player__main-play-icon" width="220" height="220" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
