--- a/src/scss/sections/_explore.scss
+++ b/src/scss/sections/_explore.scss
@@ -36,7 +36,7 @@
         }
     }
     &__comparison-img-before {
-        background-image: url("/img/explore/slider-before.jpg");
+        background-image: url("/img/explore/slider-before.webp");
         background-size: cover;
         position: relative;
         width: 100%;
@@ -50,7 +50,7 @@
         }
     }
     &__comparison-img-after {
-        background-image: url("/img/explore/slider-after.jpg");
+        background-image: url("/img/explore/slider-after.webp");
         background-size: cover;
         position: absolute;
         width: 50%;
