--- a/src/scss/sections/_parallax.scss
+++ b/src/scss/sections/_parallax.scss
@@ -1,6 +1,6 @@
 .parallax {
     .parallax-picture-box {
-        background-image: url('/img/parallax/parallax-image.jpg');
+        background-image: url('/img/parallax/parallax-image.webp');
         height: 400px;
         width: 100%;
         background-attachment: fixed;
