--- a/src/html/includes/main/gallery.html
+++ b/src/html/includes/main/gallery.html
@@ -3,19 +3,19 @@
         <h2 class="title">Art Gallery</h2>
         <div class="gallery__body">
             <div class="body__column">
-                <img class="body__column-image" src="./img/gallery/galery2.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery2.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery2.jpg" alt="">
+                <img class="body__column-image" src="./img/gallery/galery2.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery2.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery2.webp" alt="">
             </div>
             <div class="body__column">
-                <img class="body__column-image" src="./img/gallery/galery1.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery1.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery1.jpg" alt="">
+                <img class="body__column-image" src="./img/gallery/galery1.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery1.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery1.webp" alt="">
             </div>
             <div class="body__column">
-                <img class="body__column-image" src="./img/gallery/galery3.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery3.jpg" alt="">
-                <img class="body__column-image" src="./img/gallery/galery3.jpg" alt="">
+                <img class="body__column-image" src="./img/gallery/galery3.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery3.webp" alt="">
+                <img class="body__column-image" src="./img/gallery/galery3.webp" alt="">
             </div>
         </div>
     </div>
