--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -4,7 +4,7 @@
             <h2 class="title">buy tickets</h2>
         </div>
         <div class="tickets__body">
-            <img class="tickets__body-img" src="./img/tickets/main-image-tickets.jpg" alt="">
+            <img class="tickets__body-img" src="./img/tickets/main-image-tickets.webp" alt="">
             <div class="tickets-type">
                 <span class="tickets-type__title">Ticket Type</span>
                 <label class="tickets-type__bar-title" for="permanent">
