feat: add lazy loading to img

--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -71,19 +71,19 @@
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
-                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
-                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
-                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                 </ul>
@@ -91,19 +91,19 @@
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
-                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
-                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
-                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                 </ul>
@@ -111,19 +111,19 @@
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
-                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
-                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
-                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                 </ul>
@@ -131,19 +131,19 @@
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
-                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
-                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
-                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                 </ul>
@@ -151,19 +151,19 @@
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image1.webp">
-                            <img src="./img/burger/gallery-image1-768.webp" alt="">
+                            <img src="./img/burger/gallery-image1-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image2.webp">
-                            <img src="./img/burger/gallery-image2-768.webp" alt="">
+                            <img src="./img/burger/gallery-image2-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                     <li class="burger-gallery__item">
                         <picture class="burger-gallery__item-image">
                             <source media="(max-width: 479.98px)" srcset="./img/burger/gallery-image3-768.webp">
-                            <img src="./img/burger/gallery-image3-768.webp" alt="">
+                            <img src="./img/burger/gallery-image3-768.webp" alt="" loading="lazy">
                         </picture>
                     </li>
                 </ul>
