--- a/src/html/includes/main/hero.html
+++ b/src/html/includes/main/hero.html
@@ -16,11 +16,11 @@
             <input id="slide4" type="radio" name="slide" />
             <input id="slide5" type="radio" name="slide" />
             <div class="hero-slider__images">
-                <img class="hero-slider__images-item1" src="./img/hero/hero-image1.webp" alt="" />
-                <img class="hero-slider__images-item2" src="./img/hero/hero-image2.webp" alt="" />
-                <img class="hero-slider__images-item3" src="./img/hero/hero-image3.webp" alt="" />
-                <img class="hero-slider__images-item4" src="./img/hero/hero-image4.webp" alt="" />
-                <img class="hero-slider__images-item5" src="./img/hero/hero-image5.webp" alt="" />
+                <img class="hero-slider__images-item1" src="./img/hero/hero-image1.webp" alt="" loading="lazy" />
+                <img class="hero-slider__images-item2" src="./img/hero/hero-image2.webp" alt="" loading="lazy" />
+                <img class="hero-slider__images-item3" src="./img/hero/hero-image3.webp" alt="" loading="lazy" />
+                <img class="hero-slider__images-item4" src="./img/hero/hero-image4.webp" alt="" loading="lazy" />
+                <img class="hero-slider__images-item5" src="./img/hero/hero-image5.webp" alt="" loading="lazy" />
             </div>
             <div class="slider-nav">
                 <div class="slider-nav__slides-counter">
