feat: some fixes

--- a/src/html/includes/main/parallax.html
+++ b/src/html/includes/main/parallax.html
@@ -1,5 +1,5 @@
 <div class="parallax">
-    <picture class="parallax-picture-box">
+    <picture class="parallax-picture-box" loading="lazy">
         <img class="parallax-picture-box__img" src="/img/parallax/parallax-image.webp" alt="" loading="lazy">
     </picture>
 </div>
