feat: some fixes

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -19,8 +19,8 @@
             </div>
         </div>
         <div class="explore__comparison">
-            <figure class="explore__comparison-img-before" loading="lazy">
-                <div class="explore__comparison-img-after" loading="lazy"></div>
+            <figure class="explore__comparison-img-before">
+                <div class="explore__comparison-img-after"></div>
             </figure>
         </div>
     </div>
