--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,6 +1,6 @@
 $font-base-url: "../../fonts/";
 @font-face {
-    font-family: 'Forum', sans-serif;
+    font-family: 'Forum', serif;
     src: local('Forum'),
     url("#{font-base-url}Forum/Forum.woff2") format('woff2');
     font-weight: normal;
@@ -8,48 +8,8 @@ $font-base-url: "../../fonts/";
     font-display: swap;
 }
 
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Italic'), local('Roboto-Italic'),
-//       url('Roboto-Italic.woff2') format('woff2');
-//   font-weight: normal;
-//   font-style: italic;
-//   font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Thin Italic'), local('Roboto-ThinItalic'),
-//       url('Roboto-ThinItalic.woff2') format('woff2');
-//   font-weight: 100;
-//   font-style: italic;
-//   font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Black Italic'), local('Roboto-BlackItalic'),
-//       url('Roboto-BlackItalic.woff2') format('woff2');
-//   font-weight: 900;
-//   font-style: italic;
-//   font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Light Italic'), local('Roboto-LightItalic'),
-//       url('Roboto-LightItalic.woff2') format('woff2');
-//   font-weight: 300;
-//   font-style: italic;
-//   font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Black'), local('Roboto-Black'),
-//       url('Roboto-Black.woff2') format('woff2');
-//   font-weight: 900;
-//   font-style: normal;
-//   font-display: swap;
-// }
 @font-face {
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     src: local("Roboto"),
     local("Roboto-Regular"),
     url("#{font-base-url}Roboto/Roboto-Regular.woff2") format("woff2");
@@ -58,33 +18,8 @@ $font-base-url: "../../fonts/";
     font-display: swap;
 }
 
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Thin'), local('Roboto-Thin'),
-//       url('Roboto-Thin.woff2') format('woff2');
-//   font-weight: 100;
-//   font-style: normal;
-//   font-display: swap;
-// }
-// @font-face {
-//     font-family: "Roboto";
-//     src: local("Roboto Medium"),
-//     local("Roboto-Medium"),
-//     url("#{font-base-url}Roboto/Roboto-Medium.woff2") format("woff2");
-//     font-weight: 500;
-//     font-style: normal;
-//     font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Medium Italic'), local('Roboto-MediumItalic'),
-//       url('Roboto-MediumItalic.woff2') format('woff2');
-//   font-weight: 500;
-//   font-style: italic;
-//   font-display: swap;
-// }
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     src: local('Roboto Light'),
     local('Roboto-Light'),
     url('#{font-base-url}Robot/Roboto-Light.woff2') format('woff2');
@@ -92,21 +27,3 @@ $font-base-url: "../../fonts/";
     font-style: normal;
     font-display: swap;
 }
-
-// @font-face {
-//     font-family: "Roboto";
-//     src: local("Roboto Bold"),
-//     local("Roboto-Bold"),
-//     url("#{font-base-url}Roboto/Roboto-Bold.woff2") format("woff2");
-//     font-weight: bold;
-//     font-style: normal;
-//     font-display: swap;
-// }
-// @font-face {
-//   font-family: 'Roboto';
-//   src: local('Roboto Bold Italic'), local('Roboto-BoldItalic'),
-//       url('Roboto-BoldItalic.woff2') format('woff2');
-//   font-weight: bold;
-//   font-style: italic;
-//   font-display: swap;
-// }
