feat: some fixes

--- a/src/html/includes/main/visiting.html
+++ b/src/html/includes/main/visiting.html
@@ -7,7 +7,7 @@
         </div>
         <ul class="visiting__cards">
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/XnygF">
+                <a class="card-link" href="https://clck.ru/XnygF">
                     <img class="visiting__card-img" src="./img/visiting/card-image-1.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -18,7 +18,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyha">
+                <a class="card-link" href="https://clck.ru/Xnyha">
                     <img class="visiting__card-img" src="./img/visiting/card-image-2.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -29,7 +29,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/XnyjJ">
+                <a class="card-link" href="https://clck.ru/XnyjJ">
                     <img class="visiting__card-img" src="./img/visiting/card-image-3.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -40,7 +40,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyq8">
+                <a class="card-link" href="https://clck.ru/Xnyq8">
                     <img class="visiting__card-img" src="./img/visiting/card-image-4.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -51,7 +51,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/gjxDk">
+                <a class="card-link" href="https://clck.ru/gjxDk">
                     <img class="visiting__card-img" src="./img/visiting/card-image-5.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -62,7 +62,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyqx">
+                <a class="card-link" href="https://clck.ru/Xnyqx">
                     <img class="visiting__card-img" src="./img/visiting/card-image-6.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
