--- a/src/html/includes/main/visiting.html
+++ b/src/html/includes/main/visiting.html
@@ -7,7 +7,7 @@
         </div>
         <ul class="visiting__cards">
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/XnygF">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815">
                     <img class="visiting__card-img" src="./img/visiting/card-image-1.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -18,7 +18,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyha">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500">
                     <img class="visiting__card-img" src="./img/visiting/card-image-2.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -29,7 +29,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/XnyjJ">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120">
                     <img class="visiting__card-img" src="./img/visiting/card-image-3.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -40,7 +40,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyq8">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736">
                     <img class="visiting__card-img" src="./img/visiting/card-image-4.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -51,7 +51,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/gjxDk">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.8598788,2.3355157,3a,75y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120">
                     <img class="visiting__card-img" src="./img/visiting/card-image-5.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
@@ -62,7 +62,7 @@
                 </p>
             </li>
             <li class="visiting__cards-item">
-                <a class="visiting__card-link" href="https://clck.ru/Xnyqx">
+                <a class="visiting__card-link" href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652">
                     <img class="visiting__card-img" src="./img/visiting/card-image-6.webp" alt="" loading="lazy">
                 </a>
                 <p class="visiting__card-title">
