--- a/src/html/includes/_html-top.html
+++ b/src/html/includes/_html-top.html
@@ -8,7 +8,7 @@
     <title>
         <%=title%>
     </title>
-    <link rel="preload" href=".woff2" as="font" type="font/woff2" crossorigin>
+    <!-- <link rel="preload" href="../../fonts/" as="font" type="font/woff2" crossorigin> -->
     <link rel="stylesheet" href="css/main.min.css" />
     <link rel="shortcut icon" href="favicon/favicon.ico" />
 </head>
