fix: fixing adaptive comparison

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -19,9 +19,9 @@
             </div>
         </div>
         <div class="explore__comparison">
-            <figure class="explore__comparison-img-before">
-                <div class="explore__comparison-img-after"></div>
-            </figure>
+            <img class="explore__comparison-after" src="./img/explore/slider-after.webp" loading="lazy">
+            <img class="explore__comparison-before" src="./img/explore/slider-before.webp" loading="lazy">
+            <input class="explore__comparison-divisor" type="range" min="0" max="100" value="50">
         </div>
     </div>
 </section>
