--- a/src/scss/sections/_explore.scss
+++ b/src/scss/sections/_explore.scss
@@ -12,66 +12,49 @@
         }
     }
     &__comparison {
-        width: 60vw;
-        height: 60vw;
-        max-width: 700px;
-        max-height: 700px;
+        height: 700px;
+        width: 95vmin;
+        position: relative;
         overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        @include media-breakpoint-down(md) {
-            min-width: 430px;
-            min-height: 430px;
+        @include media-breakpoint-down(lg) {
+            height: 500px;
         }
         @include media-breakpoint-down(sm) {
-            min-width: 320px;
-            min-height: 320px;
-        }
-        @include media-breakpoint-down(s) {
-            min-height: 100%;
-            min-width: 100%;
-            width: 90vw;
-            height: 90vw;
+            height: 400px;
         }
     }
-    &__comparison-img-before {
-        background-image: url("/img/explore/slider-before.webp");
-        background-size: cover;
-        position: relative;
+    &__comparison-after {
         width: 100%;
         height: 100%;
-        margin: 0;
-        img {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-    &__comparison-img-after {
-        background-image: url("/img/explore/slider-after.webp");
-        background-size: cover;
         position: absolute;
-        width: 50%;
-        box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.3);
-        overflow: hidden;
-        bottom: 0;
-        height: 100%;
+        clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
+        z-index: 1;
+        object-fit: cover;
     }
-    &__slider-before-img,
-    &__slider-after-img {
-        max-width: 720px;
-        max-height: 700px;
-        min-width: 680px;
-        min-height: 660px;
+    &__comparison-before {
         width: 100%;
         height: 100%;
+        position: absolute;
         object-fit: cover;
-        margin-top: 15px;
-        @include media-breakpoint-down(md) {
-            min-width: 100%;
-            min-height: 100%;
+    }
+    &__comparison-divisor {
+        position: relative;
+        -webkit-appearance: none;
+        width: calc( 100% + 40px);
+        height: 100%;
+        margin-left: -20px;
+        background-color: transparent;
+        outline: none;
+        z-index: 2;
+        &::-webkit-slider-thumb {
+            position: relative;
+            -webkit-appearance: none;
+            height: 40px;
+            width: 40px;
+            border: 3px solid #ffffff;
+            border-radius: 50%;
+            background-size: contain;
+            cursor: pointer;
         }
     }
 }
