feat: some fixes

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -19,9 +19,10 @@
             </div>
         </div>
         <div class="explore__comparison">
-            <img class="explore__comparison-after" src="./img/explore/slider-after.webp" loading="lazy">
-            <img class="explore__comparison-before" src="./img/explore/slider-before.webp" loading="lazy">
-            <input class="explore__comparison-divisor" type="range" min="0" max="100" value="50">
+            <img class="explore__comparison-after" src="./img/explore/slider-after.webp" alt="" loading="lazy">
+            <img class="explore__comparison-before" src="./img/explore/slider-before.webp" alt="" loading="lazy">
+            <input class="explore__comparison-divisor" id="comparison-divisor" type="range" min="0" max="100" value="50">
+            <label for="comparison-divisor"></label>
         </div>
     </div>
 </section>
