fix: some fixes

--- a/src/html/includes/main/explore.html
+++ b/src/html/includes/main/explore.html
@@ -22,7 +22,7 @@
             <img class="explore__comparison-after" src="./img/explore/slider-after.webp" alt="" loading="lazy">
             <img class="explore__comparison-before" src="./img/explore/slider-before.webp" alt="" loading="lazy">
             <input class="explore__comparison-divisor" id="comparison-divisor" type="range" min="0" max="100" value="50">
-            <label for="comparison-divisor"></label>
+            <label class="explore__comparison-undertext" for="comparison-divisor">Drag divisor</label>
         </div>
     </div>
 </section>
