--- a/src/scss/sections/_explore.scss
+++ b/src/scss/sections/_explore.scss
@@ -57,6 +57,9 @@
             cursor: pointer;
         }
     }
+    &__comparison-undertext {
+        display: none;
+    }
 }
 
 .explore-left {
